<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:contentDescription="@string/app_name"
    android:background="@color/black">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_action_fantasy_manhwa"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TableRow>
                <ImageView
                    android:id="@+id/soloImg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/solo"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TableRow>
                        <TextView
                            android:id="@+id/soloHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Solo Leveling"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/soloDesc"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:text="@string/solo"
                            android:textSize="18sp" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow>
                <ImageView
                    android:id="@+id/towerImg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/tower"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TableRow>
                        <TextView
                            android:id="@+id/towerHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Tower of God"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/towerDesc"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tower"
                            android:textSize="18sp" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow>
                <ImageView
                    android:id="@+id/hardImg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/hard"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TableRow>
                        <TextView
                            android:id="@+id/hardHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Hardcore Leveling Warrior"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/hardDesc"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:text="@string/hard"
                            android:textSize="18sp" />
                    </TableRow>
                </TableLayout>
            </TableRow>
            <TableRow>
                <ImageView
                    android:id="@+id/nobleesImg"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/noblees"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">
                    <TableRow>
                        <TextView
                            android:id="@+id/nobleesHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Noblesse"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/nobleesDesc"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:text="@string/noblees"
                            android:textSize="18sp" />
                    </TableRow>
                </TableLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>